2007-02-22  Fernando Perez  <Fernando.Perez@colorado.edu>

	* IPython/genutils.py (clock): I modified clock() to return total
	time, user+system.  This is a more commonly needed metric.  I also
	introduced the new clocku/clocks to get only user/system time if
	one wants those instead.
	
	***WARNING: API CHANGE*** clock() used to return only user time,
	so if you want exactly the same results as before, use clocku
	instead.

2007-02-22  Ville Vainio  <vivainio@gmail.com>

	* IPython/Extensions/ipy_p4.py: Extension for improved
        p4 (perforce version control system) experience.
        Adds %p4 magic with p4 command completion and
        automatic -G argument (marshall output as python dict)

2007-02-19  Fernando Perez  <Fernando.Perez@colorado.edu>

	* IPython/demo.py (Demo.re_stop): make dashes optional in demo
	stop marks. 
	(ClearingMixin): a simple mixin to easily make a Demo class clear
	the screen in between blocks and have empty marquees. The
	ClearDemo and ClearIPDemo classes that use it are included.

2007-02-18  Fernando Perez  <Fernando.Perez@colorado.edu>

	* IPython/irunner.py (pexpect_monkeypatch): patch pexpect to
	protect against exceptions at Python shutdown time.  Patch
	sumbmitted to upstream.

2007-02-14  Walter Doerwald  <walter@livinglogic.de>

	* IPython/Extensions/ibrowse.py: If entering the first object level
	(i.e. the object for which the browser has been started) fails,
	now the error is raised directly (aborting the browser) instead of
	running into an empty levels list later.

2007-02-03  Walter Doerwald  <walter@livinglogic.de>

	* IPython/Extensions/ipipe.py: Add an xrepr implementation
	for the noitem object.

2007-01-31  Fernando Perez  <Fernando.Perez@colorado.edu>

	* IPython/completer.py (Completer.attr_matches): Fix small
	tab-completion bug with Enthought Traits objects with units.
	Thanks to a bug report by Tom Denniston
	<tom.denniston-AT-alum.dartmouth.org>.

2007-01-27  Fernando Perez  <Fernando.Perez@colorado.edu>
